--- a/html/Fabu/Frame1List_win.html
+++ b/html/Fabu/Frame1List_win.html
@@ -25,7 +25,7 @@
         api.openFrame({
             name: 'Frame1List_frm',
             url: 'Frame1List_frm.html',
-            bounces: true,
+            bounces: false,
             rect: {
                 x: 0,
                 y: headerPos.h,
