--- a/html/Fabu/Resume_frame.html
+++ b/html/Fabu/Resume_frame.html
@@ -147,6 +147,8 @@
 <script type="text/javascript" src="../../script/api.js" ></script>
 <script type="text/javascript" src="../../script/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="../../script/layer/layer.js"></script>
+<script type="text/javascript" src="../../script/ydui.js"></script>
+<script type="text/javascript" src="../../script/city.js"></script>
 <script type="text/javascript" src="../../script/Reg.js"></script>
 <script type="text/javascript">
     apiready = function(){
