--- a/html/user/setting_frm.html
+++ b/html/user/setting_frm.html
@@ -60,9 +60,6 @@
     apiready = function(){
         api.parseTapmode();
     }
-    var jsfun  = function load() {
-      window.location.reload()
-    }
      function fnopenuserInfo() {
       //  打开个人资料设置页面
       api.openWin({
@@ -92,18 +89,21 @@
       }, function(ret, err){
           if( ret.buttonIndex==1 ){
             $api.rmStorage('userInfo');
-            api.closeToWin({
-                name: 'login',
-                animation:{
-                  type:"none",                //动画类型（详见动画类型常量）
-                  subType:"from_bottom",        //动画子类型（详见动画子类型常量）
-                  duration:300
-                }
-            });  
+            api.closeFrame({
+                  name: 'userWindow'
+                });
             api.execScript({
                   name: 'root',//你要刷新winName
-                  script: jsfun
+                  script:'load()'
               });
+              api.openWin({
+                  name: 'index',
+                  url: '../../index.html', 
+                  pageParam: {
+                      name: 'test'
+                  }
+              });
+
           }else{
           }
       });
